--- a/FlashPrinter/Assets/zh-Hant.lproj/FPLocalizable.strings
+++ b/FlashPrinter/Assets/zh-Hant.lproj/FPLocalizable.strings
@@ -10,7 +10,7 @@
 "fp.printing" = "正在打印...";
 "fp.print not connected" = "未连接蓝牙打印机";
 "fp.connect now" = "立即连接";
-"fp.content device" = "连接设备";
+"fp.content device" = "連接設備";
 "fp.print done" = "打印完成";
 "fp.unknown error" = "未知错误";
 "fp.Low battery" = "低电量";
@@ -22,10 +22,10 @@
 "fp.Bluetooth version is not applicable" = "蓝牙不支持";
 "fp.Bluetooth is not authorized" = "蓝牙未授权";
 "fp.Your printer does not support" = "你的厂商不支持Flash，请联系你的打印机厂商解决。Flash推荐大家使用官方FlashToy和耗材，可以在Flash App首页进行购买。";
-"fp.Bluetooth is disconnected abnormally" = "蓝牙异常断开";
+"fp.Bluetooth is disconnected abnormally" = "藍牙異常斷開 ";
 "fp.Printer not found?" = "找不到打印机？请重启打印机后再试，如仍然无法找到，请重启APP";
-"fp.Connect the printer" = "选择打印机";
-"fp.Searching for printers" = "正在搜索设备中...";
+"fp.Connect the printer" = "選擇打印機 ";
+"fp.Searching for printers" = "正在搜索設備中...";
 "fp.Connection successful" = "连接成功 正在打印";
 "fp.Connection failed" = "连接失败 请重试";
 "fp.Total" = "共";
@@ -37,4 +37,4 @@
 "fp.Bluetooth is resetting" = "蓝牙正在重置";
 "fp.Bluetooth unknown error" = "未知的错误，请检查蓝牙功能!";
 "fp.Prompt" = "提示";
-"fp.ok" = "确定";
+"fp.ok" = "確定";
