添加翻译，优化细节

--- a/FlashPrinter/Assets/en.lproj/FPLocalizable.strings
+++ b/FlashPrinter/Assets/en.lproj/FPLocalizable.strings
@@ -28,9 +28,8 @@
 "fp.Searching for printers" = "Searching for printers...";
 "fp.Connection successful" = "Connection successful, printing in progress";
 "fp.Connection failed" = "Connection failed. Please try again";
-"fp.Total" = "共";
-"fp.copy" = "份";
-"fp.Printing location" = "正在打印第";
+"fp.copy" = "A total of * copies";
+"fp.Printing location" = "Printing the * (th) copy";
 "fp.Recevied data error" = "Received data processing error, please contact customer service";
 "fp.Failed to enable Bluetooth service" = "Failed to open Bluetooth service, please contact customer service";
 "fp.The printing device is disconnected" = "The printing device is disconnected";
