--- a/FlashPrinter/Assets/lo.lproj/FPLocalizable.strings
+++ b/FlashPrinter/Assets/lo.lproj/FPLocalizable.strings
@@ -7,34 +7,34 @@
 */
 "fp.print" = "ປິ້ນ";
 "fp.cancel print" = "ຍົກເລີກການພິມ";
-"fp.printing" = "正在打印...";
-"fp.print not connected" = "未连接蓝牙打印机";
-"fp.connect now" = "立即连接";
+"fp.printing" = "ກຳລັງປຼີ້ນ...";
+"fp.print not connected" = "ຍັງບໍ່ໄດ້ເຊື່ອມຕໍ່ເຄື່ອງປຼີ້ນ Bluetooth ເທື່ອ";
+"fp.connect now" = "ເຊື່ອມຕໍ່ດຽວນີ້";
 "fp.content device" = "ເຊື່ອມຕໍ່ອຸປະກອນ";
 "fp.print done" = "ການພິມສຳເລັດແລ້ວ";
-"fp.unknown error" = "未知错误";
-"fp.Low battery" = "低电量";
-"fp.Paper shortage" = "缺纸";
-"fp.Device is overheated" = "过热";
-"fp.Device's cover is open" = "设备开盖";
-"fp.Bluetooth is on" = "蓝牙已启动";
-"fp.Bluetooth is off" = "蓝牙未启动";
-"fp.Bluetooth version is not applicable" = "蓝牙不支持";
-"fp.Bluetooth is not authorized" = "蓝牙未授权";
-"fp.Your printer does not support" = "你的厂商不支持Flash，请联系你的打印机厂商解决。Flash推荐大家使用官方FlashToy和耗材，可以在Flash App首页进行购买。";
+"fp.unknown error" = "ຄວາມຜິດພາດທີ່ບໍ່ຮູ້ຈັກ";
+"fp.Low battery" = "ແບັດຕາຣີຕ່ໍາ";
+"fp.Paper shortage" = "ເຈ້ຍໝົດ";
+"fp.Device is overheated" = "ຮ້ອນເກີນໄປ";
+"fp.Device's cover is open" = "ການເປີດອຸປະກອນ";
+"fp.Bluetooth is on" = "Bluetooth ຖືກເປີດໃຊ້ງານແລ້ວ";
+"fp.Bluetooth is off" = "Bluetooth ບໍ່ໄດ້ເປີດໃຊ້ງານ";
+"fp.Bluetooth version is not applicable" = "Bluetooth ບໍ່ຮອງຮັບ";
+"fp.Bluetooth is not authorized" = "Bluetooth ບໍ່ໄດ້ຮັບອະນຸຍາດ ";
+"fp.Your printer does not support" = "ຜູ້ຜະລິດຂອງທ່ານບໍ່ຮອງຮັບ Flash, ກະລຸນາຕິດຕໍ່ຫາຜູ້ຜະລິດເຄື່ອງປຼີ້ນຂອງທ່ານເພື່ອແກ້ໄຂ. Flash ແນະນຳໃຫ້ທຸກຄົນໃຊ້ FlashToy ແລະ ວັດສະດຸທີ່ເປັນທາງການ, ເຊິ່ງສາມາດຫາຊື້ໄດ້ໃນໜ້າທຳຫຼັກຂອງ Flash App. ";
 "fp.Bluetooth is disconnected abnormally" = "Bluetooth ຕັດເຊື່ອມຕໍ່ແບບຜິດປົກກະຕິ";
-"fp.Printer not found?" = "找不到打印机？请重启打印机后再试，如仍然无法找到，请重启APP";
+"fp.Printer not found?" = "ບໍ່ສາມາດຊອກຫາເຄື່ອງປຼີ້ນໄດ້ບໍ? ກະລຸນາເປີດເຄື່ອງປຼີ້ນໃໝ່ແລ້ວລອງໃໝ່ອີກຄັ້ງ, ຖ້າມັນຍັງບໍ່ສາມາດຊອກເຫັນໄດ້, ກະລຸນາເປີດ APP ຄືນໃໝ່. ";
 "fp.Connect the printer" = "ເລືອກເຄື່ອງປິ້ນ";
 "fp.Searching for printers" = "ກຳລັງຄົ້ນຫາອຸປະກອນຢູ່...";
-"fp.Connection successful" = "连接成功 正在打印";
-"fp.Connection failed" = "连接失败 请重试";
-"fp.Total" = "共";
-"fp.copy" = "份";
-"fp.Printing location" = "正在打印第";
-"fp.Recevied data error" = "接收数据处理出错，请联系客服";
-"fp.Failed to enable Bluetooth service" = "开启蓝牙服务失败，请联系客服";
-"fp.The printing device is disconnected" = "打印设备已断开连接";
-"fp.Bluetooth is resetting" = "蓝牙正在重置";
-"fp.Bluetooth unknown error" = "未知的错误，请检查蓝牙功能!";
+"fp.Connection successful" = "ການເຊື່ອມຕໍ່ສຳເລັດ, ກຳລັງດຳເນີນການປຼີ້ນ.";
+"fp.Connection failed" = "ການເຊື່ອມຕໍ່ລົ້ມເຫລວ, ກະລຸນາລອງໃໝ່ອີກຄັ້ງ.";
+"fp.copy" = "ທັງໝົດ * ຊຸດ";
+"fp.Printing location" = "ກຳລັງປຼີ້ນຊຸດທີ *";
+
+"fp.Recevied data error" = "ໄດ້ຮັບຂໍ້ຜິດພາດໃນການປະເມີນຜົນຂໍ້ມູນ,ກະລຸນາຕິດຕໍ່ຫາຝ່າຍບໍລິການລູກຄ້າ.";
+"fp.Failed to enable Bluetooth service" = "ການເປີດບໍລິການ Bluetooth ລົ້ມເຫຼວ, ກະລຸນາຕິດຕໍ່ຫາຝ່າຍບໍລິການລູກຄ້າ.";
+"fp.The printing device is disconnected" = "ອຸປະກອນການປຼີ້ນຖືກຕັດການເຊື່ອມຕໍ່ແລ້ວ";
+"fp.Bluetooth is resetting" = "ກຳລັງຣີເຊັດ Bluetooth ໃໝ່";
+"fp.Bluetooth unknown error" = "ເກີດຂໍ້ຜິດພາດທີ່ບໍ່ຮູ້ຈັກ, ກະລຸນາກວດເບິ່ງຟັງຊັນ Bluetooth ໃໝ່. !";
 "fp.Prompt" = "ແຈ້ງເຕືອນ";
 "fp.ok" = "ຢືນຢັນ";
