--- a/FlashPrinter/Assets/vi.lproj/FPLocalizable.strings
+++ b/FlashPrinter/Assets/vi.lproj/FPLocalizable.strings
@@ -5,36 +5,35 @@
   Created by yulong mei on 2021/3/24.
   
 */
-"fp.print" = "Print";
-"fp.cancel print" = "Cancel print";
-"fp.printing" = "Printing...";
-"fp.print not connected" = "Bluetooth printer not connected";
-"fp.connect now" = "Connect now";
-"fp.content device" = "Connect the device";
-"fp.print done" = "Print completed";
-"fp.unknown error" = "Unknown error";
-"fp.Low battery" = "Low battery";
-"fp.Paper shortage" = "Paper shortage";
-"fp.Device is overheated" = "Device is overheated";
-"fp.Device's cover is open" = "Device's cover is open";
-"fp.Bluetooth is on" = "Bluetooth is on";
-"fp.Bluetooth is off" = "Bluetooth is off";
-"fp.Bluetooth version is not applicable" = "Bluetooth version is not applicable";
-"fp.Bluetooth is not authorized" = "Bluetooth is not authorized";
-"fp.Your printer does not support" = "Your printer does not support the printing of Flash Express barcode sticker, please contact your printer manufacturer to solve it. It is recommended that you use official Flash Toy and Flash Toy sticker paper to print barcode sticker. The above items can be purchased on the Flash Express APP homepage.";
-"fp.Bluetooth is disconnected abnormally" = "Bluetooth is disconnected abnormally";
-"fp.Printer not found?" = "Printer not found? Please restart the printer and try again. If you still can't find it, please restart the app";
-"fp.Connect the printer" = "Connect the printer";
-"fp.Searching for printers" = "Searching for printers...";
-"fp.Connection successful" = "Connection successful, printing in progress";
-"fp.Connection failed" = "Connection failed. Please try again";
-"fp.Total" = "共";
-"fp.copy" = "份";
-"fp.Printing location" = "正在打印第";
-"fp.Recevied data error" = "Received data processing error, please contact customer service";
-"fp.Failed to enable Bluetooth service" = "Failed to open Bluetooth service, please contact customer service";
-"fp.The printing device is disconnected" = "The printing device is disconnected";
-"fp.Bluetooth is resetting" = "Bluetooth is resetting";
-"fp.Bluetooth unknown error" = "Unknown error, please check the Bluetooth function!";
-"fp.Prompt" = "Prompt";
-"fp.ok" = "OK";
+"fp.print" = "In";
+"fp.cancel print" = "Hủy bỏ in";
+"fp.printing" = "Đang in...";
+"fp.print not connected" = "Máy in Bluetooth chưa được kết nối";
+"fp.connect now" = "Kết nối ngay";
+"fp.content device" = "Kết nối thiết bị";
+"fp.print done" = "Đã in xong";
+"fp.unknown error" = "Lỗi không rõ";
+"fp.Low battery" = "Pin thấp";
+"fp.Paper shortage" = "Hết giấy";
+"fp.Device is overheated" = "Qúa nhiệt";
+"fp.Device's cover is open" = "Mở nắp thiết bị";
+"fp.Bluetooth is on" = "Bluetooth đã được kích hoạt";
+"fp.Bluetooth is off" = "Bluetooth chưa được kích hoạt";
+"fp.Bluetooth version is not applicable" = "Bluetooth không hỗ trợ";
+"fp.Bluetooth is not authorized" = "Bluetooth chưa được ủy quyền";
+"fp.Your printer does not support" = "Nhà sản xuất của bạn không hỗ trợ Flash, vui lòng liên hệ với nhà sản xuất máy in của bạn để giải quyết. Flash khuyến nghị quý khách sử dụng FlashToy chính thức và vật tư tiêu hao, có thể mua tại trang chủ của APP Flash.";
+"fp.Bluetooth is disconnected abnormally" = "Bluetooth bị ngắt kết nối bất thường";
+"fp.Printer not found?" = "Không thể tìm thấy máy in? Vui lòng khởi động lại máy in và thử lại, nếu vẫn không tìm thấy được, vui lòng khởi động lại APP";
+"fp.Connect the printer" = "Chọn máy in";
+"fp.Searching for printers" = "Đang tìm kiếm thiết bị...";
+"fp.Connection successful" = "Kết nối thành công, đang in";
+"fp.Connection failed" = "Kết nối không thành công, vui lòng thử lại";
+"fp.copy" = "Tổng cộng * bản";
+"fp.Printing location" = "Đang in bản thứ *";
+"fp.Recevied data error" = "Việc xử lý dữ liệu nhận được bị lỗi, vui lòng liên hệ với chăm sóc khách hàng";
+"fp.Failed to enable Bluetooth service" = "Không mở được dịch vụ Bluetooth, vui lòng liên hệ với chăm sóc khách hàng";
+"fp.The printing device is disconnected" = "Thiết bị in bị ngắt kết nối";
+"fp.Bluetooth is resetting" = "Bluetooth đang được đặt lại";
+"fp.Bluetooth unknown error" = "Lỗi không rõ, vui lòng kiểm tra chức năng Bluetooth";
+"fp.Prompt" = "Nhắc nhở";
+"fp.ok" = "Xác nhận";
